# cuda_study

./: CMakeLists.txt
src/cpp/: multi_dim_span.hpp
src/cuda/: main.cu  wappers.cuh
